Returning to fontawesome (without 5) as I didn't realize it doesn't look nice.

--- a/template/main.tex
+++ b/template/main.tex
@@ -18,7 +18,7 @@
 \usepackage{tikz}
 \usepackage{xcolor}
 % Find icons: https://mirrors.ibiblio.org/CTAN/fonts/fontawesome5/doc/fontawesome5.pdf
-\usepackage{fontawesome5}
+\usepackage{fontawesome}
 \usepackage{subfigure}
 \usepackage{tcolorbox}
 \usepackage{indentfirst}
